src/test/ui/parser/keyword-const-as-identifier.stderr
error: expected `{`, found `=`
  --> $DIR/keyword-const-as-identifier.rs:4:15
   |
LL |     let const = "foo";
   |               ^ expected `{`

error: aborting due to previous error

